# depthfinder

./: README.md  depthfinder.py  pyproject.toml
src/depthfinder/: depthfinder.py
